--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:noHistory="true">
 
             <!--
-     Set custom default icon. This is used when no icon is set for incoming notification messages.
+     Set custom default_tone icon. This is used when no icon is set for incoming notification messages.
      See README(https://goo.gl/l4GJaQ) for more.
             -->
             <meta-data
